Wifi HTML CSS3 25.10.2018

--- a/maler/index.html
+++ b/maler/index.html
@@ -55,8 +55,26 @@
 
         </nav>
 
+        <nav class="footer-right">
+          <ul>
+            <li>
+              <a href="#">Malermeister</a>
+            </li>
+            <li>
+              <a href="#">Leistung und Service</a>
+            </li>
+            <li>
+              <a href="#">Farbenfachgeschäft</a>
+            </li>
+            <li>
+              <a href="#">Farben mischen</a>
+            </li>
+          </ul>
+
+        </nav>
       </div>
       <div class="footer-bottom">
+        2018 &copy Malermaister Pasquale Corrado
       </div>
     </footer>
 
