Wifi HTML CSS3 Media Konfig

--- a/maler/index.html
+++ b/maler/index.html
@@ -58,16 +58,16 @@
         <nav class="footer-right">
           <ul>
             <li>
-              <a href="#">Malermeister</a>
+              <a href="#">Kontakt</a>
             </li>
             <li>
-              <a href="#">Leistung und Service</a>
+              <a href="#">Impressum</a>
             </li>
             <li>
-              <a href="#">Farbenfachgeschäft</a>
+              <a href="#">Datenschutz &amp; Cookies</a>
             </li>
             <li>
-              <a href="#">Farben mischen</a>
+              <a href="#">Anfahrtsplan</a>
             </li>
           </ul>
 
