--- a/maler/index.html
+++ b/maler/index.html
@@ -2,11 +2,18 @@
 <html lang="de" dir="ltr">
   <head>
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/base.css">
     <title>Muthwill - Der Malermeister</title>
   </head>
   <body>
+    <div id="logo">
+      <a href="#">Malermaister Wilhelm Muthwill</a>
+    </div>
+    <div id="logo-part-2">
+      <a href="#">Malermaister Wilhelm Muthwill</a>
+    </div>
+<!--
     <nav>
       <ul>
         <li>
@@ -23,20 +30,139 @@
         </li>
       </ul>
     </nav>
+-->
+
 
     <header>
-    <img src="img/header_1.jpg" alt="Fassadenanstriche mit Farbgestaltung"/>
-    <div class="inner-wrapper">
-      <h1>Fassadenanstriche mit Farbgestaltung</h1>
+    <img src="img/header_1.jpg" alt="Fassadenanstriche mit  Farbgestaltung"/>
+    <div class="inner-wrapper" style="font-size: 25px; text-transform: uppercase;">
+      <h1>Fassadenanstriche mit <br> Farbgestaltung</h1>
     </div>
     </header>
 
-    <main>
+    <header style="height: 15px; background: rgb(17, 100, 111)">
+    </header>
 
+    <header style="height: auto">
+    <div class="inner-wrapper1">
+      <h2>Restauration der gesamten Eingangsfassade<br>der Schwarzacher Kirche</h2>
+      <p>
+        <h3>Umfangreiche Putzausbesserung und Neuanstrich
+          <br>der kompletten Eingangsfassade in den
+          <br>bestehenden historishen Farbtöne.
+        </h3>
+      </p>
+      <p>
+        <h3>Um die strengen Auflagen des Denkmalamtes zu
+          <br>erfüllen wurden die Restaurationsarbeiten mit
+          <br>100% mineralischen Farben der Firma Keim
+          <br>durchgeführt.
+        </h3>
+      </p>
+    </div>
+    </header>
+
+<!--
+    <header style="height: 50px; background: rgb(255, 255, 255);">
+      <div class="inner-wrapper">
+        <p  align="center"; style="font-size: 30px;  margin: 10px;">
+          <u1>BRILLUX Farbdesigner</u1>
+        </p>
+    </div>
+    </header>
+
+    <header style="height: auto; padding: 10px; background: rgb(255, 255, 255);">
+    <div class="inner-wrapper" style="font-size: 25px;">
+    <img src="img/img_01.jpg"/>
+    </div>
+    /header>
+  -->
+
+
+
+    <main>
+      <section class="content-element" id="Malermeister">
+        <div class="inner-wrapper">
+          <header style="height: 50px; background: rgb(255, 255, 255);">
+            <div class="inner-wrapper"  >
+              <p style="font-size: 30px;  margin: 10px; text-transform: uppercase;">
+                <u1>Malermeister</u1>
+              </p>
+          </div>
+          </header>
+        </div>
+
+        <header style="height: auto; padding: 10px; background: rgb(255, 255, 255);">
+
+        <div  class="teaser" >
+         <div class="inner-wrapper">
+          <p<br><br></p>
+
+          <p>
+          1956 Gründung des Unternehmens von Ernst
+          <br>Mutwill Senior. Ab 1993 Leitung der Malerei
+          <br>von den Gebrüdern Ernst und Wilhelm Muthwill.
+          <br>Seit 01.01.2003 wird der Betrieb von Malermeister
+          <br>Wilhelm Muthwill geführt.
+          </p>
+          <p>
+          1956 Gründung des Unternehmens von Ernst
+          <br>Mutwill Senior. Ab 1993 Leitung der Malerei
+          <br>von den Gebrüdern Ernst und Wilhelm Muthwill.
+          <br>Seit 01.01.2003 wird der Betrieb von Malermeister
+          <br>Wilhelm Muthwill geführt.
+          </p>
+          </div>
+        </div>
+
+        </header>
+      </section>
+
+      <section class="content-element">
+        <div class="inner-wrapper">
+          <header style="height: 50px; background: rgb(255, 255, 255);">
+            <div class="inner-wrapper"  >
+              <p style="font-size: 30px;  margin: 10px; text-transform: uppercase;">
+                <u1>Malermeister</u1>
+              </p>
+          </div>
+          </header>
+        </div>
+
+        <header style="height: auto; padding: 10px; background: rgb(255, 255, 255);">
+
+        <div  class="teaser" url("../img/img_01.jpg")>
+         <div class="inner-wrapper">
+          <p<br><br></p>
+
+          <p>
+          1956 Gründung des Unternehmens von Ernst
+          <br>Mutwill Senior. Ab 1993 Leitung der Malerei
+          <br>von den Gebrüdern Ernst und Wilhelm Muthwill.
+          <br>Seit 01.01.2003 wird der Betrieb von Malermeister
+          <br>Wilhelm Muthwill geführt.
+          </p>
+          <p>
+          1956 Gründung des Unternehmens von Ernst
+          <br>Mutwill Senior. Ab 1993 Leitung der Malerei
+          <br>von den Gebrüdern Ernst und Wilhelm Muthwill.
+          <br>Seit 01.01.2003 wird der Betrieb von Malermeister
+          <br>Wilhelm Muthwill geführt.
+          </p>
+          </div>
+          <a class="button" href="#Malermeister">aiuto</a>
+        </div>
+
+        </header>
+      </section>
     </main>
 
+
+
+
+
     <footer>
-      <div class="footer-top">
+      <div class="footer-top inner-wrapper">
         <nav class="footer-left">
           <ul>
             <li>
@@ -52,7 +178,6 @@
               <a href="#">Farben mischen</a>
             </li>
           </ul>
-
         </nav>
 
         <nav class="footer-right">
@@ -67,15 +192,20 @@
               <a href="#">Datenschutz &amp; Cookies</a>
             </li>
             <li>
-              <a href="#">Anfahrtsplan</a>
+              <a href="#">Zurück zum Anfang</a>
             </li>
           </ul>
-
         </nav>
       </div>
+
+      <header>
       <div class="footer-bottom">
-        2018 &copy Malermaister Pasquale Corrado
+        <p>
+          2018 &copy Malermaister Pasquale Corrado
+        </p>
       </div>
+      </header>
+
     </footer>
 
   </body>
