--- a/maler/index.html
+++ b/maler/index.html
@@ -1,212 +1,178 @@
 <!DOCTYPE html>
 <html lang="de" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/content-element.css">
     <title>Muthwill - Der Malermeister</title>
   </head>
+
   <body>
     <div id="logo">
-      <a href="#">Malermaister Wilhelm Muthwill</a>
+      <a href="#" title="Malermeister Wilhelm Muthwill">Zurück zur Startseite</a>
     </div>
+
     <div id="logo-part-2">
-      <a href="#">Malermaister Wilhelm Muthwill</a>
+      <a href="#" title="Malermeister Wilhelm Muthwill">
+        <span>Malermeister Wilhelm Muthwill</span>
+      </a>
     </div>
-<!--
-    <nav>
+
+    <nav class="main-navigation">
       <ul>
-        <li>
-          <a href="#">Home</a>
-        </li>
-        <li>
-          <a href="#">Stukko</a>
-        </li>
-        <li>
-          <a href="#">Fassadenanstriche mit Farbgestaltung</a>
-        </li>
-        <li>
-          <a href="#">Handmalarei und Fresco MasterHome</a>
-        </li>
+        <li> <a href="#">Home</a> </li>
+        <li> <a href="#">Stukko</a> </li>
+        <li> <a href="#">Fassadenanstriche mit Farbgestaltung</a> </li>
+        <li> <a href="#">Wandmalerei und Fresco Master</a> </li>
       </ul>
     </nav>
--->
 
 
-    <header>
-    <img src="img/header_1.jpg" alt="Fassadenanstriche mit  Farbgestaltung"/>
-    <div class="inner-wrapper" style="font-size: 25px; text-transform: uppercase;">
-      <h1>Fassadenanstriche mit <br> Farbgestaltung</h1>
-    </div>
-    </header>
-
-    <header style="height: 15px; background: rgb(17, 100, 111)">
-    </header>
-
-    <header style="height: auto">
-    <div class="inner-wrapper1">
-      <h2>Restauration der gesamten Eingangsfassade<br>der Schwarzacher Kirche</h2>
-      <p>
-        <h3>Umfangreiche Putzausbesserung und Neuanstrich
-          <br>der kompletten Eingangsfassade in den
-          <br>bestehenden historishen Farbtöne.
-        </h3>
-      </p>
-      <p>
-        <h3>Um die strengen Auflagen des Denkmalamtes zu
-          <br>erfüllen wurden die Restaurationsarbeiten mit
-          <br>100% mineralischen Farben der Firma Keim
-          <br>durchgeführt.
-        </h3>
-      </p>
-    </div>
-    </header>
-
-<!--
-    <header style="height: 50px; background: rgb(255, 255, 255);">
-      <div class="inner-wrapper">
-        <p  align="center"; style="font-size: 30px;  margin: 10px;">
-          <u1>BRILLUX Farbdesigner</u1>
-        </p>
-    </div>
-    </header>
-
-    <header style="height: auto; padding: 10px; background: rgb(255, 255, 255);">
-    <div class="inner-wrapper" style="font-size: 25px;">
-    <img src="img/img_01.jpg"/>
-    </div>
-    /header>
-  -->
-
-
-
-    <main>
-      <section class="content-element" id="Malermeister">
+      <header id="main-header">
+        <img src="img/header_1.jpg" alt="Fassadenanstriche mit Farbgestaltung" />
         <div class="inner-wrapper">
-          <header style="height: 50px; background: rgb(255, 255, 255);">
-            <div class="inner-wrapper"  >
-              <p style="font-size: 30px;  margin: 10px; text-transform: uppercase;">
-                <u1>Malermeister</u1>
-              </p>
-          </div>
-          </header>
+          <h1>Fassadenanstriche mit <br> Farbgestaltung</h1>
         </div>
-
-        <header style="height: auto; padding: 10px; background: rgb(255, 255, 255);">
-
-        <div  class="teaser" >
-         <div class="inner-wrapper">
-          <p<br><br></p>
-
-          <p>
-          1956 Gründung des Unternehmens von Ernst
-          <br>Mutwill Senior. Ab 1993 Leitung der Malerei
-          <br>von den Gebrüdern Ernst und Wilhelm Muthwill.
-          <br>Seit 01.01.2003 wird der Betrieb von Malermeister
-          <br>Wilhelm Muthwill geführt.
-          </p>
-          <p>
-          1956 Gründung des Unternehmens von Ernst
-          <br>Mutwill Senior. Ab 1993 Leitung der Malerei
-          <br>von den Gebrüdern Ernst und Wilhelm Muthwill.
-          <br>Seit 01.01.2003 wird der Betrieb von Malermeister
-          <br>Wilhelm Muthwill geführt.
-          </p>
-          </div>
-        </div>
-
-        </header>
-      </section>
-
-      <section class="content-element">
-        <div class="inner-wrapper">
-          <header style="height: 50px; background: rgb(255, 255, 255);">
-            <div class="inner-wrapper"  >
-              <p style="font-size: 30px;  margin: 10px; text-transform: uppercase;">
-                <u1>Malermeister</u1>
-              </p>
-          </div>
-          </header>
-        </div>
-
-        <header style="height: auto; padding: 10px; background: rgb(255, 255, 255);">
-
-        <div  class="teaser" url("../img/img_01.jpg")>
-         <div class="inner-wrapper">
-          <p<br><br></p>
-
-          <p>
-          1956 Gründung des Unternehmens von Ernst
-          <br>Mutwill Senior. Ab 1993 Leitung der Malerei
-          <br>von den Gebrüdern Ernst und Wilhelm Muthwill.
-          <br>Seit 01.01.2003 wird der Betrieb von Malermeister
-          <br>Wilhelm Muthwill geführt.
-          </p>
-          <p>
-          1956 Gründung des Unternehmens von Ernst
-          <br>Mutwill Senior. Ab 1993 Leitung der Malerei
-          <br>von den Gebrüdern Ernst und Wilhelm Muthwill.
-          <br>Seit 01.01.2003 wird der Betrieb von Malermeister
-          <br>Wilhelm Muthwill geführt.
-          </p>
-          </div>
-          <a class="button" href="#Malermeister">aiuto</a>
-        </div>
-
-        </header>
-      </section>
-    </main>
-
-
-
-
-
-    <footer>
-      <div class="footer-top inner-wrapper">
-        <nav class="footer-left">
-          <ul>
-            <li>
-              <a href="#">Malermeister</a>
-            </li>
-            <li>
-              <a href="#">Leistung und Service</a>
-            </li>
-            <li>
-              <a href="#">Farbenfachgeschäft</a>
-            </li>
-            <li>
-              <a href="#">Farben mischen</a>
-            </li>
-          </ul>
-        </nav>
-
-        <nav class="footer-right">
-          <ul>
-            <li>
-              <a href="#">Kontakt</a>
-            </li>
-            <li>
-              <a href="#">Impressum</a>
-            </li>
-            <li>
-              <a href="#">Datenschutz &amp; Cookies</a>
-            </li>
-            <li>
-              <a href="#">Zurück zum Anfang</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-
-      <header>
-      <div class="footer-bottom">
-        <p>
-          2018 &copy Malermaister Pasquale Corrado
-        </p>
-      </div>
       </header>
 
-    </footer>
+      <header style="height: 15px; background: rgb(17, 100, 111)">
+      </header>
 
+      <main>
+
+        <section class="content-element" id="malermeister">
+          <header>
+            <h2 class="inner-wrapper">Malermeister</h2>
+          </header>
+          <div class="teaser" style="
+            background-image:
+            -webkit-linear-gradient(rgba(255,125,0,0.5), rgba(255,125,0,0.5)),
+            url(img/img_01.jpg);
+
+            background-image:
+            linear-gradient(rgba(255,125,0,0.5), rgba(255,125,0,0.5)),
+            url(img/img_01.jpg);">
+              <div class="inner-wrapper">
+                <h2>Restauration der gesamten Eingangsfassade<br>der Schwarzacher Kirche</h2>
+                <p>
+                  <h3>Umfangreiche Putzausbesserung und Neuanstrich
+                    <br>der kompletten Eingangsfassade in den
+                    <br>bestehenden historishen Farbtöne.
+                  </h3>
+                </p>
+                <p>
+                  <h3>Um die strengen Auflagen des Denkmalamtes zu
+                    <br>erfüllen wurden die Restaurationsarbeiten mit
+                    <br>100% mineralischen Farben der Firma Keim
+                    <br>durchgeführt.
+                  </h3>
+                </p>
+              </div>
+
+          </div>
+          <div class="content-text inner-wrapper">
+            <p>
+              Test Test Test
+              <img src="img/kb_logo.jpg" alt="Klimabündnis Salzburg">
+              Test Logo
+            </p>
+            <p>
+              <a class="button" href="#malermeister" title="Hier gehts zum Malermeister">Kontaktieren Sie uns</a>
+            </p>
+          </div>
+        </section>
+
+
+
+        <section class="content-element">
+          <header>
+            <h2 class="inner-wrapper">BRILLUX - Farbdesigner</h2>
+          </header>
+          <div class="teaser" style="
+            background-image:
+            -webkit-linear-gradient(rgba(255,125,0,0.5), rgba(255,125,0,0.5)),
+            url(img/img_01.jpg);
+
+            background-image:
+            linear-gradient(rgba(255,125,0,0.5), rgba(255,125,0,0.5)),
+            url(img/img_01.jpg);">
+              <div class="inner-wrapper">
+                <h2>Restauration der gesamten Eingangsfassade<br>der Schwarzacher Kirche</h2>
+                <p>
+                  <h3>Umfangreiche Putzausbesserung und Neuanstrich
+                    <br>der kompletten Eingangsfassade in den
+                    <br>bestehenden historishen Farbtöne.
+                  </h3>
+                </p>
+                <p>
+                  <h3>Um die strengen Auflagen des Denkmalamtes zu
+                    <br>erfüllen wurden die Restaurationsarbeiten mit
+                    <br>100% mineralischen Farben der Firma Keim
+                    <br>durchgeführt.
+                  </h3>
+                </p>
+              </div>
+
+          </div>
+          <div class="content-text inner-wrapper">
+            <p>
+              Test Test Test
+              <img src="img/kb_logo.jpg" alt="Klimabündnis Salzburg">
+              Test Logo
+            </p>
+            <p>
+              <a class="button" href="#malermeister" title="Hier gehts zum Malermeister">Kontaktieren Sie uns</a>
+            </p>
+          </div>
+        </section>
+
+      </main>
+
+
+  <footer>
+          <div class="footer-top inner-wrapper">
+            <nav class="footer-left">
+              <ul>
+                <li>
+                  <a href="#">Malermeister</a>
+                </li>
+                <li>
+                  <a href="#">Leistungen und Service</a>
+                </li>
+                <li>
+                  <a href="#">Farbenfachgeschäft</a>
+                </li>
+                <li>
+                  <a href="#">Farben mischen</a>
+                </li>
+              </ul>
+            </nav>
+
+            <nav class="footer-right">
+              <ul>
+                <li>
+                  <a href="#">Kontakt</a>
+                </li>
+                <li>
+                  <a href="#">Impressum</a>
+                </li>
+                <li>
+                  <a href="#">Datenschutz &amp; Cookies</a>
+                </li>
+                <li>
+                  <a href="#">Zurück zum Anfang</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="footer-bottom inner-wrapper">
+            2018 © Malermeister Wilhelm Muthwill
+          </div>
+
+
+    </footer>
   </body>
 </html>
