--- a/maler/index.html
+++ b/maler/index.html
@@ -33,7 +33,7 @@
       <header id="main-header">
         <img src="img/header_1.jpg" alt="Fassadenanstriche mit Farbgestaltung" />
         <div class="inner-wrapper">
-          <h1>Fassadenanstriche mit <br> Farbgestaltung</h1>
+          <h1>Fassadenanstriche <br>mit Farbgestaltung</h1>
         </div>
       </header>
 
@@ -44,7 +44,11 @@
 
         <section class="content-element" id="malermeister">
           <header>
-            <h2 class="inner-wrapper">Malermeister</h2>
+            <p>
+              <h2 class="inner-wrapper" style="font-family: 'Pridi'; font-size: 40px;  text-transform: uppercase;">
+                Malermeister</h2>
+            </p>
+
           </header>
           <div class="teaser" style="
             background-image:
@@ -54,7 +58,7 @@
             background-image:
             linear-gradient(rgba(255,125,0,0.5), rgba(255,125,0,0.5)),
             url(img/img_01.jpg);">
-              <div class="inner-wrapper">
+              <div class="inner-wrapper" style="color: white">
                 <h2>Restauration der gesamten Eingangsfassade<br>der Schwarzacher Kirche</h2>
                 <p>
                   <h3>Umfangreiche Putzausbesserung und Neuanstrich
@@ -74,8 +78,10 @@
           </div>
           <div class="content-text inner-wrapper">
             <p>
-              Test Test Test
-              <img src="img/kb_logo.jpg" alt="Klimabündnis Salzburg">
+              Test Test Test sdfkljl lkjdfs lkj klfjsd klj klsdj flks
+              fdsfjklsjd lflkj sdklfj klsjd flk sdlkf klsdj fkljsd fkljsdsdf
+              kjlkfsdjkljsdkljfklsdjfkl klj dfklj sdlkj
+              <img width="80%"src="img/kb_logo.jpg" alt="Klimabündnis Salzburg">
               Test Logo
             </p>
             <p>
@@ -96,7 +102,6 @@
             url(img/img_01.jpg);
 
             background-image:
-            linear-gradient(rgba(255,125,0,0.5), rgba(255,125,0,0.5)),
             url(img/img_01.jpg);">
               <div class="inner-wrapper">
                 <h2>Restauration der gesamten Eingangsfassade<br>der Schwarzacher Kirche</h2>
@@ -119,7 +124,7 @@
           <div class="content-text inner-wrapper">
             <p>
               Test Test Test
-              <img src="img/kb_logo.jpg" alt="Klimabündnis Salzburg">
+              <img width="80%"src="img/kb_logo.jpg" alt="Klimabündnis Salzburg">
               Test Logo
             </p>
             <p>
