--- a/uebung2/index5.html
+++ b/uebung2/index5.html
@@ -5,11 +5,11 @@
     <title></title>
   </head>
   <body>
-    ich versuche   in diesem   Beispiel meinem text
+    ich versuche   in diesem   Beispiel meinem text ohne HTML Elemente zu formattieren
     <p>
-      hier eine absatz
+      hier eine absatz mithilfe eine absatz-htm-tags
       <br>
-      Zeileumbruchung
+      Hier noch Zeileumbruchung
     </p>
     <p>
       Neu Paragraf, absatz
