--- a/maler/index.html
+++ b/maler/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="de" dir="ltr">
-
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/content-element.css">
     <title>Muthwill - Der Malermeister</title>
   </head>
-
   <body>
+
     <div id="logo">
       <a href="#" title="Malermeister Wilhelm Muthwill">Zurück zur Startseite</a>
     </div>
@@ -22,121 +21,102 @@
 
     <nav class="main-navigation">
       <ul>
-        <li> <a href="#">Home</a> </li>
-        <li> <a href="#">Stukko</a> </li>
-        <li> <a href="#">Fassadenanstriche mit Farbgestaltung</a> </li>
-        <li> <a href="#">Wandmalerei und Fresco Master</a> </li>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Stukko Spachteltechnik</a>
+        </li>
+        <li>
+          <a href="#">Fassadenanstriche mit Farbgestaltung</a>
+        </li>
+        <li>
+          <a href="#">Wandmalerei und Fresco Master</a>
+        </li>
       </ul>
     </nav>
 
+    <header id="main-header">
+      <img src="img/header_1.jpg" alt="Fassadenanstriche Headerbild 1" />
+      <div class="inner-wrapper">
+        <h1>Fassadenanstriche mit Farbgestaltung</h1>
+      </div>
+    </header>
 
-      <header id="main-header">
-        <img src="img/header_1.jpg" alt="Fassadenanstriche mit Farbgestaltung" />
-        <div class="inner-wrapper">
-          <h1>Fassadenanstriche <br>mit Farbgestaltung</h1>
+    <main>
+
+      <section class="content-element" id="malermeister">
+        <header>
+          <h2 class="content-header inner-wrapper">Muthwill Fassadenanstriche</h2>
+        </header>
+
+        <div class="teaser">
+
+            <img src="img/img_01.jpg" alt="Example Image Malermeister">
+
+            <div class="inner-wrapper">
+              <p>
+                Integraler Bestandteil unseres Leistungsangebotes - wie der Fassadengestaltung und Fassadenanstriche, Renovierungen, Oberflächenveredelung von Fußböden, Möbel und Holzverkleidungen, Fassaden und Innenräumen ist eine fundierte Beratung. Wichtig sind das gesunde Raumklima sowie Farbe und ihre Eigenschaften und Wirkungen auf den Betrachter/Bewohner.
+
+Unsere Leistungen im Überblick
+              </p>
+            </div>
+
         </div>
-      </header>
+        <div class="content-text inner-wrapper">
+          <p>
+            Viele unserer Kunden sind nicht nur handwerklich begabt, sondern laufen bei der Wohnungsrenovierung zu wahrer Höchstform auf. Voraussetzung für den Erfolg, bzw. den Spaß am Heimwerken, ist jedoch Qualität bei Farbe und Werkzeug.
+            <img width="80%" src="img/kb_logo.jpg" alt="Klimabündnis Salzburg">
+            Umfangreiche Putzausbesserung und Neuanstrich der kompletten Eingangsfassade in den bestehenden historischen Farbtönen.
+          </p>
+          <p>
+            <a class="button" href="#malermeister" title="Hier gehts zum Malermeister">Kontaktieren Sie uns</a>
+          </p>
 
-      <header style="height: 15px; background: rgb(17, 100, 111)">
-      </header>
 
-      <main>
-
-        <section class="content-element" id="malermeister">
-          <header>
-            <p>
-              <h2 class="inner-wrapper" style="font-family: 'Pridi'; font-size: 40px;  text-transform: uppercase;">
-                Malermeister</h2>
-            </p>
-
-          </header>
-          <div class="teaser" style="
-            background-image:
-            -webkit-linear-gradient(rgba(255,125,0,0.5), rgba(255,125,0,0.5)),
-            url(img/img_01.jpg);
-
-            background-image:
-            linear-gradient(rgba(255,125,0,0.5), rgba(255,125,0,0.5)),
-            url(img/img_01.jpg);">
-              <div class="inner-wrapper" style="color: white">
-                <h2>Restauration der gesamten Eingangsfassade<br>der Schwarzacher Kirche</h2>
-                <p>
-                  <h3>Umfangreiche Putzausbesserung und Neuanstrich
-                    <br>der kompletten Eingangsfassade in den
-                    <br>bestehenden historishen Farbtöne.
-                  </h3>
-                </p>
-                <p>
-                  <h3>Um die strengen Auflagen des Denkmalamtes zu
-                    <br>erfüllen wurden die Restaurationsarbeiten mit
-                    <br>100% mineralischen Farben der Firma Keim
-                    <br>durchgeführt.
-                  </h3>
-                </p>
-              </div>
-
-          </div>
-          <div class="content-text inner-wrapper">
-            <p>
-              Test Test Test sdfkljl lkjdfs lkj klfjsd klj klsdj flks
-              fdsfjklsjd lflkj sdklfj klsjd flk sdlkf klsdj fkljsd fkljsdsdf
-              kjlkfsdjkljsdkljfklsdjfkl klj dfklj sdlkj
-              <img width="80%"src="img/kb_logo.jpg" alt="Klimabündnis Salzburg">
-              Test Logo
-            </p>
-            <p>
-              <a class="button" href="#malermeister" title="Hier gehts zum Malermeister">Kontaktieren Sie uns</a>
-            </p>
-          </div>
-        </section>
+        </div>
+      </section>
 
 
 
-        <section class="content-element">
-          <header>
-            <h2 class="inner-wrapper">BRILLUX - Farbdesigner</h2>
-          </header>
-          <div class="teaser" style="
-            background-image:
-            -webkit-linear-gradient(rgba(255,125,0,0.5), rgba(255,125,0,0.5)),
-            url(img/img_01.jpg);
+      <section class="content-element">
+        <header>
+          <h2 class="inner-wrapper">BRILLUX - Farbdesigner</h2>
+        </header>
+        <div class="teaser" style="
+          background-image:
+          -webkit-linear-gradient(rgba(255,125,0,0.5), rgba(255,125,0,0.5)),
+          url(img/img_01.jpg);
 
-            background-image:
-            url(img/img_01.jpg);">
-              <div class="inner-wrapper">
-                <h2>Restauration der gesamten Eingangsfassade<br>der Schwarzacher Kirche</h2>
-                <p>
-                  <h3>Umfangreiche Putzausbesserung und Neuanstrich
-                    <br>der kompletten Eingangsfassade in den
-                    <br>bestehenden historishen Farbtöne.
-                  </h3>
-                </p>
-                <p>
-                  <h3>Um die strengen Auflagen des Denkmalamtes zu
-                    <br>erfüllen wurden die Restaurationsarbeiten mit
-                    <br>100% mineralischen Farben der Firma Keim
-                    <br>durchgeführt.
-                  </h3>
-                </p>
-              </div>
+          background-image:
+          linear-gradient(rgba(255,125,0,0.5), rgba(255,125,0,0.5)),
+          url(img/img_01.jpg);">
+            <div class="inner-wrapper">
+              <p>
+                Viele unserer Kunden sind nicht nur handwerklich begabt, sondern laufen bei der Wohnungsrenovierung zu wahrer Höchstform auf. Voraussetzung für den Erfolg, bzw. den Spaß am Heimwerken, ist jedoch Qualität bei Farbe und Werkzeug.
+              </p>
+            </div>
 
-          </div>
-          <div class="content-text inner-wrapper">
-            <p>
-              Test Test Test
-              <img width="80%"src="img/kb_logo.jpg" alt="Klimabündnis Salzburg">
-              Test Logo
-            </p>
-            <p>
-              <a class="button" href="#malermeister" title="Hier gehts zum Malermeister">Kontaktieren Sie uns</a>
-            </p>
-          </div>
-        </section>
+        </div>
+        <div class="content-text inner-wrapper">
+          <p>
+          Viele unserer Kunden sind nicht nur handwerklich begabt, sondern laufen bei der Wohnungsrenovierung zu wahrer Höchstform auf. Voraussetzung für den Erfolg, bzw. den Spaß am Heimwerken, ist jedoch Qualität bei Farbe und Werkzeug.
+          <img width="80%" src="img/kb_logo.jpg" alt="Klimabündnis Salzburg">
+          Sie können sicher sein in unserem Fachgeschäft beides in Profi-Qualität vorzufinden. Den kleinen Tipp am Rande können wir Ihnen in unserem Fachgeschäft natürlich sofort geben.
+          Unsere Mitarbeiter werden laufend geschult und helfen Ihnen bei Problemen und Fragen gerne weiter. Gleichzeitig profitieren Sie aber auch vom Know-How unserer Maler-Werkstätte.
+          Damit Sie als Heimwerker aber nicht auf Profi-Qualität verzichten müssen, haben wir nur erstklassige Farbqualitäten im Sortiment. Sie können mit den gleichen Qualitäten zu Hause arbeiten, wie unsere Maler.
+          </p>
+          <p>
+            <a class="button">Kontaktieren Sie uns</a>
+          </p>
 
-      </main>
+        </div>
+      </section>
+
+    </main>
 
 
-  <footer>
+    <footer>
           <div class="footer-top inner-wrapper">
             <nav class="footer-left">
               <ul>
