--- a/uebung1/orizontal-menu.html
+++ b/uebung1/orizontal-menu.html
@@ -19,6 +19,12 @@
           <ul>
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
+
+              <ol>
+              <ul>
+                <li><a href="#">Link 1 pizza</a></li>
+              </ul>
+              </ol>
             <li><a href="#">Link 3</a></li>
           </ul>
         </li>
