--- a/uebung1/quiz.html
+++ b/uebung1/quiz.html
@@ -25,6 +25,12 @@
     <td>Trippa alla romana</td>
   </tr>
 
+
+  <dl>
+    <dt>sdfsdf</dt>
+    <dt>sdfsdf</dt>
+
+  </dl>
   <tr>
     <td rowspan="2">22 Kg.</td>
     <td>Carne di ciuccio</td>
