--- a/maler/index.html
+++ b/maler/index.html
@@ -113,6 +113,84 @@ Unsere Leistungen im Überblick
         </div>
       </section>
 
+
+<section class="content-element content-background">
+  <div class="content-text inner-wrapper" >
+
+<form  class="content-submit" action="index.html" method="post">
+  <table style="padding: 10px;">
+    <tr >
+      <td  style="width:30%; color: white;" >
+        Name:*
+      </td>
+
+      <td style="width:70%">
+        <input type="text" name="firstname" tabindex="1" id="firstname" value="" placeholder="Name" required>
+      </td>
+    </tr>
+
+    <tr >
+      <td  style="width:30%;  color: white;" >
+        Firma:*
+      </td>
+
+      <td style="width:70%">
+            <input type="text" name="firma" tabindex="2" id="firma" value="" placeholder="Firma" required>
+      </td>
+    </tr>
+
+    <tr >
+      <td style="width:30%; color: white;" >
+        E-mail:*
+      </td>
+
+      <td style="width:70%">
+            <input type="email" name="email" tabindex="3" id="email" value="" placeholder="deine email">
+      </td>
+    </tr>
+
+    <tr >
+      <td  style="width:30%;  color: white;" >
+        Betreff:*
+      </td>
+
+      <td style="width:70%">
+            <input type="text" name="betreff" tabindex="4" id="betreff" value="" placeholder="Betreff" required>
+      </td>
+    </tr>
+
+    <tr >
+      <td valign="top" style="width:30%;  color: white;" >
+        Ihr Anliegen:*
+      </td>
+
+      <td style="width:70%">
+            <textarea name="anliegen" cols=80 rows=10 >Ihr Anliegen</textarea>
+      </td>
+    </tr>
+
+    <tr >
+      <td align="right" style="width:25%">
+      </td>
+
+      <td style="width:60%">
+       <input  type="submit" id="submit" name="submit" value="Absenden" >
+      </td>
+    </tr>
+
+
+  </table>
+
+
+
+    </form>
+
+  </div>
+
+</section>
+
+
+
     </main>
 
 
