--- a/maler/index.html
+++ b/maler/index.html
@@ -112,6 +112,31 @@ Unsere Leistungen im Überblick
 
         </div>
       </section>
+<footer>
+
+<section class="content-element content-background">
+  <form  class="content-submit" action="index.html" method="post">
+  <div class="footer-top inner-wrapper">
+
+      <nav class="footer-left">
+        <ul>
+          <li>
+            Name:*
+          </li>
+        </ul>
+      </nav>
+      <nav class="footer-right">
+        <ul>
+          <li>
+          <input type="text" name="firstname" tabindex="1" id="firstname" value="" placeholder="Name" required>
+          </li>
+        </ul>
+      </nav>
+    </div>
+</form>
+</section>
+</footer>
+
 
 
 <section class="content-element content-background">
@@ -145,7 +170,7 @@ Unsere Leistungen im Überblick
       </td>
 
       <td style="width:70%">
-            <input type="email" name="email" tabindex="3" id="email" value="" placeholder="deine email">
+            <input type="email" name="email" tabindex="3" id="email" value="" placeholder="deine email" required>
       </td>
     </tr>
 
@@ -165,7 +190,7 @@ Unsere Leistungen im Überblick
       </td>
 
       <td style="width:70%">
-            <textarea name="anliegen" cols=80 rows=10 >Ihr Anliegen</textarea>
+            <textarea name="anliegen" cols=80 rows=10 required>Ihr Anliegen</textarea>
       </td>
     </tr>
 
