--- a/california/index.html
+++ b/california/index.html
@@ -26,9 +26,9 @@
           <nav class="main-navigation">
             <ul>
               <li><a href="#"><font color="red">HOME</font></a></li>
-              <li><a href="#">BILDER</a></li>
-              <li><a href="#">REISETAGEBUCH</a></li>
-              <li><a href="#">KONTAKT</a></li>
+              <li><a href="index1.html">BILDER</a></li>
+              <li><a href="index2.html">REISETAGEBUCH</a></li>
+              <li><a href="index3.html">KONTAKT</a></li>
             </ul>
           </nav>
         </div>
@@ -125,46 +125,77 @@
         </div>
       </div>
 
+
+	<div>
+		<div class="gallery">
+			<img src="img/gallery1.png" alt="" />
+			<img src="img/gallery2.png" alt="" />
+			<img src="img/gallery3.png" alt="" />
+			<img src="img/gallery4.png" alt="" />
+		</div>
+		<div class="gallery">
+			<img src="img/gallery5.png" alt="" />
+			<img src="img/gallery6.png" alt="" />
+			<img src="img/gallery7.png" alt="" />
+			<img src="img/gallery8.png" alt="" />
+		</div>
+	</div>
+
+
     </main>
 
     <footer>
 
-             <div class="footer-top inner-wrapper">
-               <nav class="footer-left">
-                 gfhfhfhfh
-               </nav>
+          <div class="footer-top inner-wrapper">
 
-               <nav class="footer-right">
-                 <ul>
-                   <li>
-                     <a href="#">impressum</a>
-                   </li>
-                   <li>
-                     <a href="#">Kontakt</a>
-                   </li>
-                   <li>
-                     <a href="#">Datenschutzhinweis</a>
-                   </li>
-                 </ul>
-               </nav>
-             </div>
+            <nav class="footer-left">
+              <span style="color: rgb(150,150,150)">
+              <p>Dies ist ein virtuelles Reisetagebuch von John Doe <br>
+                Sämtliche Bilder sind rechtlich geschütz und dürfen nur mit <br>
+                ausdrücklicher Genehmigung verwendet werdr. <br>
+                <br>
+                <b>John Doe</b> <br>
+                Uferweg 10 <br>
+                1001 Wien <br>
+                +43 12 23 45 7 <br>stammgast@mcdonalds.at <br>
+              </p>
+              </span>
+            </nav>
 
-             <div style="background-color: rgb(32,32,32)" >
-               <div class="footer-left footer-bottom inner-wrapper">
-                 Copyright 2017 | John Doe
+            <nav class="footer-right">
+              <ul>
+                <li>
+                  <a href="#">impressum</a>
+                </li>
+                <li>
+                  <a href="#">Kontakt</a>
+                </li>
+                <li>
+                  <a href="#">Datenschutzhinweis</a>
+                </li>
+              </ul>
+            </nav>
+         </div>
+            <div style="color: rgb(132,132,132);" class="footer-top inner-wrapper">
+              <nav class="footer-left">
+
+               <div>
+                   Copyright 2017 | John Doe
                </div>
+              </nav>
 
-               <div class="footer-right footer-bottom inner-wrapper">
-                 FACEBOOK | YOUTUBE | TWITTER
-               </div>
+              <nav class="footer-right">
+                <div>
+                   FACEBOOK | YOUTUBE | TWITTER
+                 </div>
+              </nav>
             </div>
 
-            <div class="footer-top inner-wrapper">
-             <br>
-            </div>
+              <div class="footer-top inner-wrapper">
+               <br>
+              </div>
 
        </footer>
-
 
   </body>
 </html>
