--- a/california/index.html
+++ b/california/index.html
@@ -4,10 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/content-element.css">
     <title>California</title>
   </head>
 
   <body>
+    <main>
+
+
     <div class="grid-container">
 
         <div class="grid-item">
@@ -21,10 +25,10 @@
         <div class="grid-item">
           <nav class="main-navigation">
             <ul>
-              <li><a href="#">HOME</a></li>
-              <li><a href="#">BILDER</a></li>
-              <li><a href="#">REISETAGEBUCH</a></li>
-              <li><a href="#">KONTAKT</a></li>
+              <li><a href="#"><font color="red">HOME</font></a></li>
+              <li><a href="index1.html">BILDER</a></li>
+              <li><a href="index2.html">REISETAGEBUCH</a></li>
+              <li><a href="index3.html">KONTAKT</a></li>
             </ul>
           </nav>
         </div>
@@ -32,36 +36,166 @@
 
     <header id="main-header">
       <img src="img/goldengatebridge.jpg" alt="" />
-      <div class="inner-wrapper">
-        <h1>GOLDEN GATE</h1>
+      <div>
+          <h2>San Francisco's</h2>
+          <h1><font color=red> GOLDEN </font>GATE BRIDGE</h1>
+          <h2>Lorem ipsum dolor sit amen, consetetur sadipsccing</h2>
+          <h2>elitr, sed diam nonumy eirmod tempor invidunt ut</h2>
+          <h2>labore et dolore magna aliquyam erat.</h2>
       </div>
     </header>
 
+    <header id="main-header-center">
+      <div align=center class="">
+          <font color="red">MEINE</font> REISEZIELE <br>
+          <font size="1" color="black">durch und um Kalifornien</font>
+      </div>
+      <br>
+    </header>
 
-
-    <main>
-
-      <!--
-        <div style="position: absolute; right: 200px;">
-          <p>
-          <img style="100px; width: 150px;" src="img/california-flag.png" alt="" />
-          </p>
+    <div align=center class="grid-container-img1">
+        <div class="grid-item-img1">
+          <p></p>
         </div>
-      -->
 
-      <h3> MEINE REISE ZIELE</h3>
-      Durch und um Kalifornien
+        <div class="grid-item-img1">
+          <nav class="main-navigation">
+            <ul>
+              <li><a href="#"><img src="img/lake-powell.png" alt="" /></a>
+                <div>
+                  <br>
+                  LAKE POWELL
+                </div>
+                <div style="font-size: 10px;  font-weight: lighter;">
+                  <p>
+                    Ein Flug über den<br>
+                    <b>Lake Powell</b> und<br>
+                    <b>Monument Valley</b>
+                  </p>
+                </div>
+                <div>
+                  <p>
+                    <a href="#">Mehr dazu</a>
+                  </p>
+                </div>
+              </li>
+
+              <li><a href="#"><img src="img/hollywood.png" alt="" /></a>
+                <div>
+                  <br>
+                  HOLLYWOOD
+                </div>
+                <div style="font-size: 10px;  font-weight: lighter;">
+                  <p>
+                    1853 stand in dem Gebiet das<br>
+                    heute <b>Hollywood</b> geört, nicht<br>
+                    mehr als eine Adobehütte
+                  </p>
+                </div>
+                <div>
+                  <p>
+                    <a href="#">Mehr dazu</a>
+                  </p>
+                </div>
+              </li>
+
+              <li><a href="#"><img src="img/san-diego.png" alt="" /></a>
+                <div>
+                  <br>
+                  SAN DIEGO
+                </div>
+                <div style="font-size: 10px;  font-weight: lighter;">
+                  <p>
+                    Ein Besuch in <b>Seaworld</b> in<br>
+                    San Diego <br><br>
+                  </p>
+                </div>
+                <div>
+                  <p>
+                    <a href="#">Mehr dazu</a>
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="grid-item-img1">
+          <p></p>
+        </div>
+      </div>
 
 
-
-
-
-
+	<div>
+		<div class="gallery">
+			<img src="img/gallery1.png" alt="" />
+			<img src="img/gallery2.png" alt="" />
+			<img src="img/gallery3.png" alt="" />
+			<img src="img/gallery4.png" alt="" />
+		</div>
+		<div class="gallery">
+			<img src="img/gallery5.png" alt="" />
+			<img src="img/gallery6.png" alt="" />
+			<img src="img/gallery7.png" alt="" />
+			<img src="img/gallery8.png" alt="" />
+		</div>
+	</div>
 
 
     </main>
 
+    <footer>
 
+          <div class="footer-top inner-wrapper">
+
+            <nav class="footer-left">
+              <span style="color: rgb(150,150,150)">
+              <p>Dies ist ein virtuelles Reisetagebuch von John Doe <br>
+                Sämtliche Bilder sind rechtlich geschütz und dürfen nur mit <br>
+                ausdrücklicher Genehmigung verwendet werdr. <br>
+                <br>
+                <b>John Doe</b> <br>
+                Uferweg 10 <br>
+                1001 Wien <br>
+                +43 12 23 45 7 <br>stammgast@mcdonalds.at <br>
+              </p>
+              </span>
+            </nav>
+
+            <nav class="footer-right">
+              <ul>
+                <li>
+                  <a href="#">impressum</a>
+                </li>
+                <li>
+                  <a href="#">Kontakt</a>
+                </li>
+                <li>
+                  <a href="#">Datenschutzhinweis</a>
+                </li>
+              </ul>
+            </nav>
+         </div>
+            <div style="color: rgb(132,132,132);" class="footer-top inner-wrapper">
+              <nav class="footer-left">
+
+               <div>
+                   Copyright 2017 | John Doe
+               </div>
+              </nav>
+
+              <nav class="footer-right">
+                <div>
+                   FACEBOOK | YOUTUBE | TWITTER
+                 </div>
+              </nav>
+            </div>
+
+              <div class="footer-top inner-wrapper">
+               <br>
+              </div>
+
+       </footer>
 
   </body>
 </html>
