--- a/california/index.html
+++ b/california/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/content-element.css">
+    <link rel="stylesheet" href="css/imageover.css">
     <title>California</title>
   </head>
 
@@ -36,9 +37,9 @@
 
     <header id="main-header">
       <img src="img/goldengatebridge.jpg" alt="" />
-      <div>
+      <div class="content-title">
           <h2>San Francisco's</h2>
-          <h1> <font color=red> GOLDEN </font>GATE BRIDGE</h1>
+          <h1>GOLDEN GATE <font color=red>BRIDGE</font> </h1>
           <h2>Lorem ipsum dolor sit amen, consetetur sadipsccing</h2>
           <h2>elitr, sed diam nonumy eirmod tempor invidunt ut</h2>
           <h2>labore et dolore magna aliquyam erat.</h2>
@@ -128,7 +129,7 @@
 
 	<div>
 		<div class="gallery">
-			<img src="img/gallery1.png" alt="" />
+      <img src="img/gallery1.png" alt="" />
 			<img src="img/gallery2.png" alt="" />
 			<img src="img/gallery3.png" alt="" />
 			<img src="img/gallery4.png" alt="" />
