--- a/california/index2.html
+++ b/california/index2.html
@@ -75,7 +75,12 @@
 
                   </p>
                 </div>
-            </li>
+              </li>
+              <li>
+                <div>
+                  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+                </div>
+              </li>
               <li>
                 <div>
                   <div align=right>
@@ -130,7 +135,14 @@
 
                      </p>
                    </div>
-               </li>
+                 </li>
+
+                 <li>
+                   <div>
+                     <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+                   </div>
+                 </li>
+
                  <li>
                    <div>
                      <div align=right>
