--- a/running/index.html
+++ b/running/index.html
@@ -33,7 +33,6 @@
     <img class="slider-image" src="img/foto1.jpg" alt="Bild3"/>
   </div>
 
-
 </div>
 <br>
 <br>
@@ -45,7 +44,7 @@
 
 -->
 
-    <nav class="teil1">
+    <div class="teil1">
        <div>
          <p style="font-size: 20px;">
            <b> Was geht ab? </b>
@@ -58,7 +57,7 @@
           <li><a href="index1.html">Kontakt</a></li>
         </nav>
      </div>
-   </nav>
+   </div>
 
    <div class="teil2">
      <p>
